--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-fetch": "^3.3.2",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
