--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "pre-commit": "lint-staged",
   "dependencies": {
-    "@zeit/react-jsx-parser": "2.0.0",
+    "@next/env": "^14.2.4",
     "async-sema": "3.1.0",
     "framer-motion": "^11.2.12",
     "github-slugger": "1.2.1",
@@ -19,9 +19,9 @@
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-code-blocks": "^0.1.6",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "uuid": "8.1.0"
@@ -38,6 +38,6 @@
     "prettier": "2.2.1",
     "shell-quote": "^1.8.1",
     "tailwindcss": "^3.4.4",
-    "typescript": "^4.4.4"
+    "typescript": "^4.9.5"
   }
 }
