--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "pre-commit": "lint-staged",
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "async-sema": "3.1.0",
     "framer-motion": "^11.2.12",
     "github-slugger": "1.2.1",
