--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
+    "react-type-animation": "^3.2.0",
     "uuid": "8.1.0"
   },
   "devDependencies": {
