--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-type-animation": "^3.2.0",
+    "sharp": "^0.33.5",
     "uuid": "8.1.0"
   },
   "devDependencies": {
