--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,16 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"paths": {
-			"@images/*": ["./assets/images/*"],
+			"@images/*": ["./public/images/*"],
 			"@/*": ["./src/*"]
-		}
+		},
+		"plugins": [
+			{
+				"name": "next"
+			}
+		],
+		"strictNullChecks": true
 	},
 	"exclude": ["node_modules"],
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
