--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "pre-commit": "lint-staged",
   "dependencies": {
+    "@next/third-parties": "^14.2.11",
     "@vercel/speed-insights": "^1.0.12",
     "async-sema": "3.1.0",
     "framer-motion": "^11.2.12",
     "github-slugger": "1.2.1",
     "katex": "^0.16.10",
-    "next": "^14.2.4",
+    "next": "^14.2.11",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "prismjs": "^1.29.0",
